test: List.of Arrays.asList로 변경